# Android_Security

cse444finProj-master/: README.md
cse444finProj-master/Code/: CMakeLists.txt  Makefile  main.c
cse444finProj-master/Code/object/: Makefile  apkDecompiler.c  apkDecompiler.h  dirScanner.c  dirScanner.h  fileCus.c  fileCus.h  fnMeta.c  fnMeta.h  stack.c  stack.h  universal_node.c  universal_node.h
cse444finProj-master/Code/unit_tests/: ut_dirScanner.c  ut_dirScanner.h  ut_stack.c  ut_stack.h
cse444finProj-master/Code/util/: util.h
cse444finProj-master/Code/util/REST_API/: Axplore_Permission.txt  PScout_Permission.txt  README.md  callAPI  callAPI.c  index.js  package-lock.json  package.json  random.c
cse444finProj-master/Code/util/REST_API/API_Call_C_Code/node_object/: apicall  makefile  nodeobject.c  nodeobject.h  util.h
